Optimize WeightedSnapshotWithExemplars